# gelab-zero

./: .gitignore  MCP_SERVER.md  QUICKSTART.md  README.md  README_CN.md  SCRCPY_INTEGRATION.md  mcp_server_config.yaml  mcp_server_launcher.py  pyproject.toml  requirements.txt  test_device_discovery.py
.claude/: settings.local.json
copilot_agent_client/: local_server_based_runner.py  mcp_agent_loop.py  pu_client.py
copilot_agent_server/: local_server.py
copilot_front_end/: mobile_action_helper.py  pu_frontend_executor.py  scrcpy_connection_manager.py  scrcpy_device_controller.py
copilot_tools/: parser_0920_summary.py
docs/: ACTION_EXECUTION_GUIDE.md  GET_DEVICE_IP_METHODS.md  JUMPY_ASSISTANT_MCP_SETUP.md  QUICKSTART.md  SETUP_GUIDE.md  USAGE.md
examples/: run_interactive.py  run_single_task.py
gelab-mcp-wrapper/: index.js  package.json
gelab_skill/: AI_PROMPT.md  README.md  USE_THIS_PROMPT.md  api_reference.md  examples.md  skill.md
mcp_server/: detailed_gelab_mcp_server.py  mcp_backend_implements.py  mcp_backend_streaming.py  simple_gelab_mcp_server.py  simple_gelab_mcp_server_withcaption.py  simple_http_mcp_server.py  single_action_mcp_server.py  start_http.bat  start_stdio.bat  stdio_wrapper.py
tests/: test_scrcpy_migration.py  test_scrcpy_visual.py  test_scrcpy_with_screenshots.py
tools/: ask_llm_v2.py  diagnose_device.py
